--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lodash Play</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
-  <script type="text/javascript" src="uniq.js"></script>
+  <script type="text/javascript" src="toUpper.js"></script>
 </head>
 <body>
 <h1> Lodash Play </h1>
